# multilayer-hopfield

./: .gitignore  LICENSE  README.md  pyproject.toml
hopfield/: __init__.py  datasets.py  dynamics.py  encoding.py  metrics.py  patterns.py
tests/: test_datasets.py  test_dynamics.py  test_encoding.py  test_metrics.py  test_patterns.py
