[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilayer-hopfield"
version = "0.1.0"
description = "Multilayer hetero-associative memory with pseudo-inverse couplings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrea Ladiana"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["hopfield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
